now a complite in features page about page in style html css and bootstrap

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailored Telematics</title>
+    <title>About Us</title>
     <!----- CSS here ----->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!----- All Min Css ------>
@@ -104,90 +104,168 @@
     </header>
     <!--- Header Area End --->
 
-      <!--- Our Solution Section Start -->
-      <section class="our-solution-section pt-50 pb-50 pt-md-60 pb-md-60">
-         <div class="container">
-            <div class="row">
-               <div class="col-12 text-center">
-               <div class="section-title">
-                  <h4 class="sec_subtitle">
-                        <span><img src="assets/images/play-arrow-left.png" alt=""></span>
-                        <div>Our Solution</div>
-                        <span><img src="assets/images/play-arrow-right.png" alt=""></span>
-                  </h4>
-                  <h2>Tailored Telematics Solutions<br/> for Your Business</h2>
-               </div>
-               </div>
-            </div>
-         </div>
-      </section>
-     <!--- Our Solution Section End -->
-    <!--- Trackmaster Section Start --->
-    <section class="trackmaster-section">
+     <!--- About Us Section Start -->
+     <section class="about-section p-relative pt-50 pt-md-60">
       <div class="sec-brand-logo">
          <img src="assets/images/brand-logo.png" alt="">
       </div>
-      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg-2.jpg);">
-         <div class="container">
-            <div class="trackmaster-content">
-               <h1>TrackMaster</h1>
-               <span>REAL-TIME TRACKING</span>
-           </div>
+        <div class="container">
+         <div class="row">
+            <div class="col-12 text-center">
+               <div class="section-title about-title">
+                  <h4 class="sec_subtitle">
+                        <span><img src="assets/images/play-arrow-left.png" alt=""></span>
+                        <div>About Us</div>
+                        <span><img src="assets/images/play-arrow-right.png" alt=""></span>
+                  </h4>
+                  <h2>Innovating for a Better Future</h2>
+                  <p>Focused on delivering high-quality solutions and shaping the future through<br/> innovation and excellence.</p>
+               </div>
+               <div class="about-contents-wrap">
+                   <div class="about-img">
+                       <img src="assets/images/about-bg.jpg" alt="">
+                   </div>
+                   <p>At SASC, we are pioneers in providing innovative telematics solutions designed to enhance fleet management, specifically in the trucking and logistics industry. Our primary focus is on accurate and reliable vehicle weighing systems that optimize operations, ensuring compliance and efficiency for businesses of all sizes.</p>
+               </div>
+            </div>
          </div>
-       </div>
-    </section>
-    <!--- Trackmaster Section End --->
-    <!--- WeighTrack Section Start --->
-    <section class="weightrack-section pt-50 pb-50 pt-md-120 pb-md-120">
-      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/weightrack-bg.jpg);">
+           
+        </div>
+     </section>
+     <!--- About Us Section End -->
+
+     <!--- About Box Two Section Start -->
+     <section class="about-two-box-section pt-30 pb-40 pt-md-40 pb-md-45">
          <div class="container">
-            <div class="trackmaster-content">
-               <h1>WeighTrack</h1>
-               <span>ACCURATE TRUCK WEIGHING & LOAD MANAGEMENT</span>
-           </div>
+             <div class="row">
+                <div class="col-lg-6">
+                   <div class="about-two-box-wrap mb-30">
+                       <div class="about-icon-wrap">
+                           <span><img src="assets/images/about-box-icon.png" alt=""></span>
+                           <h5>Our Mission</h5>
+                       </div>
+                       <p>Our mission is to empower companies with advanced tools to manage and track their assets effortlessly. We aim to provide solutions that not only enhance productivity but also contribute to the overall safety and sustainability of transportation operations.</p>
+                   </div>
+                </div>
+                <div class="col-lg-6">
+                   <div class="about-two-box-wrap mb-30">
+                       <div class="about-icon-wrap">
+                           <span><img src="assets/images/about-box-icon.png" alt=""></span>
+                           <h5>Commitment to Excellence</h5>
+                       </div>
+                       <p>Our mission is to empower companies with advanced tools to manage and track their assets effortlessly. We aim to provide solutions that not only enhance productivity but also contribute to the overall safety and sustainability of transportation operations.</p>
+                   </div>
+                </div>
+                <div class="col-lg-6">
+                   <div class="about-two-box-wrap mb-30">
+                       <div class="about-icon-wrap">
+                           <span><img src="assets/images/about-box-icon.png" alt=""></span>
+                           <h5>Our Mission</h5>
+                       </div>
+                       <p>Our mission is to empower companies with advanced tools to manage and track their assets effortlessly. We aim to provide solutions that not only enhance productivity but also contribute to the overall safety and sustainability of transportation operations.</p>
+                   </div>
+                </div>
+                <div class="col-lg-6">
+                   <div class="about-two-box-wrap">
+                       <div class="about-icon-wrap">
+                           <span><img src="assets/images/about-box-icon.png" alt=""></span>
+                           <h5>Our Mission</h5>
+                       </div>
+                       <p>Our mission is to empower companies with advanced tools to manage and track their assets effortlessly. We aim to provide solutions that not only enhance productivity but also contribute to the overall safety and sustainability of transportation operations.</p>
+                   </div>
+                </div>
+             </div>
          </div>
-       </div>
-    </section>
-    <!--- WeighTrack Section End --->
-    <!--- TaskMaster Section Start --->
-    <section class="taskMaster-section">
-      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg-3.jpg);">
-         <div class="container">
-            <div class="trackmaster-content">
-               <h1>TaskMaster</h1>
-               <span>Comprehensive Tasking & Routing Solution</span>
-           </div>
+     </section>
+     <!--- About Box Two Section End -->
+
+       <!--- Why Choose Us Section Start -->
+    <section class="why-choose-section pt-50 pb-50 pb-md-60">
+      <div class="container">
+         <div class="row">
+            <div class="col-12 text-center">
+              <div class="section-title">
+                 <h4 class="sec_subtitle">
+                     <span><img src="assets/images/play-arrow-left.png" alt=""></span>
+                     <div>Why Choose SASC</div>
+                     <span><img src="assets/images/play-arrow-right.png" alt=""></span>
+                 </h4>
+                 <h2>Why Partner with Us?</h2>
+              </div>
+            </div>
          </div>
-       </div>
-    </section>
-    <!--- TaskMaster Section End --->
+         <div class="row">
+            <div class="col-12">
+                <div class="why-choose-content-wrap">
+                    <h3>Your Trusted Partner for Precision Fleet Management</h3>
+                    <p>As we continue to expand and innovate, SASC remains committed to being a trusted partner for businesses that value precision, control, and results in their fleet management operations.</p>
+                    <ul class="choose-content-list">
+                       <li>State-of-the-art telematics software solutions</li>
+                       <li>Robust truck weighing and fleet tracking features</li>
+                       <li>Customizable solutions tailored to your business</li>
+                       <li>Dedicated customer support and consultancy services</li>
+                       <li>A commitment to innovation, accuracy, and efficiency</li>
+                    </ul>
+                </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!--- Why Choose Us Section End -->
 
    <!-- Solution Box Start-->
-    <section class="solution-box-two-column pt-50 pb-50 pt-md-120 pb-md-120">
-        <div class="container">
-           <div class="row">
-               <div class="col-12 col-md-6">
-                   <div class="solution-box-icon">
-                       <div class="box-icon">
-                           <img src="assets/images/solution-box-icon-1.png" alt="">
-                           <h3>Engineered For You</h3>
-                       </div>
-                       <p>We provide tailored solutions for every market need.</p>
-                   </div>
-               </div>
-               <div class="col-12 col-md-6">
-                   <div class="solution-box-icon">
-                       <div class="box-icon">
-                           <img src="assets/images/solution-box-icon-2.png" alt="">
-                           <h3>A Dedicated Team for Unique Solutions</h3>
-                       </div>
-                       <p>Our team of experts is committed to delivering customized solutions for each project, understanding that every client has unique requirements to meet.</p>
-                   </div>
-               </div>
-           </div>
-        </div>
-    </section>
-   <!-- Solution Box End-->
+   <section class="solution-box-two-column pt-50 pb-50 pb-md-120">
+      <div class="container">
+         <div class="row">
+             <div class="col-12 col-md-6">
+                 <div class="solution-box-icon mb-25">
+                     <div class="box-icon">
+                         <img src="assets/images/solution-box-icon-1.png" alt="">
+                         <h3>Technical Support</h3>
+                     </div>
+                     <p>Our dedicated sales team enables us to deliver comprehensive solutions tailored to the unique needs of our customers and partners.</p>
+                 </div>
+             </div>
+             <div class="col-12 col-md-6">
+                 <div class="solution-box-icon mb-25">
+                     <div class="box-icon">
+                         <img src="assets/images/solution-box-icon-2.png" alt="">
+                         <h3>Customer Services</h3>
+                     </div>
+                     <p>We provide prompt and efficient after-sales support to ensure you receive all the assistance you need.</p>
+                 </div>
+             </div>
+             <div class="col-12 col-md-6">
+                 <div class="solution-box-icon mb-25">
+                     <div class="box-icon">
+                         <img src="assets/images/solution-box-icon-1.png" alt="">
+                         <h3>Technical Support</h3>
+                     </div>
+                     <p>Our dedicated sales team enables us to deliver comprehensive solutions tailored to the unique needs of our customers and partners.</p>
+                 </div>
+             </div>
+             <div class="col-12 col-md-6">
+                 <div class="solution-box-icon mb-25">
+                     <div class="box-icon">
+                         <img src="assets/images/solution-box-icon-2.png" alt="">
+                         <h3>Customer Services</h3>
+                     </div>
+                     <p>We provide prompt and efficient after-sales support to ensure you receive all the assistance you need.</p>
+                 </div>
+             </div>
+             <div class="col-12 col-md-6">
+                 <div class="solution-box-icon">
+                     <div class="box-icon">
+                         <img src="assets/images/solution-box-icon-2.png" alt="">
+                         <h3>Customer Services</h3>
+                     </div>
+                     <p>We provide prompt and efficient after-sales support to ensure you receive all the assistance you need.</p>
+                 </div>
+             </div>
+         </div>
+      </div>
+  </section>
+ <!-- Solution Box End-->
 
     <!--- Your Interest Section Start -->
     <section class="your-interest-section" style="background-image: url(assets/images/from-bg.png);">
