--- a/feature.html
+++ b/feature.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailored Telematics</title>
+    <title>Features</title>
     <!----- CSS here ----->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!----- All Min Css ------>
@@ -104,90 +104,164 @@
     </header>
     <!--- Header Area End --->
 
-      <!--- Our Solution Section Start -->
-      <section class="our-solution-section pt-50 pb-50 pt-md-60 pb-md-60">
-         <div class="container">
-            <div class="row">
-               <div class="col-12 text-center">
-               <div class="section-title">
-                  <h4 class="sec_subtitle">
-                        <span><img src="assets/images/play-arrow-left.png" alt=""></span>
-                        <div>Our Solution</div>
-                        <span><img src="assets/images/play-arrow-right.png" alt=""></span>
-                  </h4>
-                  <h2>Tailored Telematics Solutions<br/> for Your Business</h2>
-               </div>
-               </div>
-            </div>
-         </div>
-      </section>
-     <!--- Our Solution Section End -->
-    <!--- Trackmaster Section Start --->
-    <section class="trackmaster-section">
+     <!--- Features Box Section Start -->
+     <section class="our-features-section p-relative pt-50 pb-50 pt-md-60 pb-md-30">
       <div class="sec-brand-logo">
          <img src="assets/images/brand-logo.png" alt="">
       </div>
-      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg-2.jpg);">
-         <div class="container">
-            <div class="trackmaster-content">
-               <h1>TrackMaster</h1>
-               <span>REAL-TIME TRACKING</span>
-           </div>
-         </div>
-       </div>
-    </section>
-    <!--- Trackmaster Section End --->
-    <!--- WeighTrack Section Start --->
-    <section class="weightrack-section pt-50 pb-50 pt-md-120 pb-md-120">
-      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/weightrack-bg.jpg);">
-         <div class="container">
-            <div class="trackmaster-content">
-               <h1>WeighTrack</h1>
-               <span>ACCURATE TRUCK WEIGHING & LOAD MANAGEMENT</span>
-           </div>
-         </div>
-       </div>
-    </section>
-    <!--- WeighTrack Section End --->
-    <!--- TaskMaster Section Start --->
-    <section class="taskMaster-section">
-      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg-3.jpg);">
-         <div class="container">
-            <div class="trackmaster-content">
-               <h1>TaskMaster</h1>
-               <span>Comprehensive Tasking & Routing Solution</span>
-           </div>
-         </div>
-       </div>
-    </section>
-    <!--- TaskMaster Section End --->
-
-   <!-- Solution Box Start-->
-    <section class="solution-box-two-column pt-50 pb-50 pt-md-120 pb-md-120">
         <div class="container">
+         <div class="row">
+            <div class="col-12 text-center">
+               <div class="section-title">
+                  <h4 class="sec_subtitle">
+                        <span><img src="assets/images/play-arrow-left.png" alt=""></span>
+                        <div>Our Feature</div>
+                        <span><img src="assets/images/play-arrow-right.png" alt=""></span>
+                  </h4>
+                  <h2>Powerful Features to Enhance<br/> Your Fleet Management</h2>
+               </div>
+            </div>
+         </div>
            <div class="row">
-               <div class="col-12 col-md-6">
-                   <div class="solution-box-icon">
-                       <div class="box-icon">
-                           <img src="assets/images/solution-box-icon-1.png" alt="">
-                           <h3>Engineered For You</h3>
-                       </div>
-                       <p>We provide tailored solutions for every market need.</p>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-1.png" alt="">
+                      </div>
+                      <h5>Battery Replacement Alerts</h5>
+                     <p>Tracks battery life and issues alerts when replacement is necessary, avoiding breakdowns.</p>
                    </div>
                </div>
-               <div class="col-12 col-md-6">
-                   <div class="solution-box-icon">
-                       <div class="box-icon">
-                           <img src="assets/images/solution-box-icon-2.png" alt="">
-                           <h3>A Dedicated Team for Unique Solutions</h3>
-                       </div>
-                       <p>Our team of experts is committed to delivering customized solutions for each project, understanding that every client has unique requirements to meet.</p>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-2.png" alt="">
+                      </div>
+                      <h5>Vehicle Insurance Renewal Alerts:</h5>
+                     <p>Provides alerts for upcoming vehicle insurance renewals, helping avoid lapses in coverage.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-3.png" alt="">
+                      </div>
+                      <h5>Vehicle Registration Renewal Alerts</h5>
+                     <p>Reminds fleet managers of upcoming vehicle registration renewals, ensuring legal compliance and avoiding penalties.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-1.png" alt="">
+                      </div>
+                      <h5>Battery Replacement Alerts</h5>
+                     <p>Tracks battery life and issues alerts when replacement is necessary, avoiding breakdowns.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-2.png" alt="">
+                      </div>
+                      <h5>Vehicle Insurance Renewal Alerts:</h5>
+                     <p>Provides alerts for upcoming vehicle insurance renewals, helping avoid lapses in coverage.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-3.png" alt="">
+                      </div>
+                      <h5>Vehicle Registration Renewal Alerts</h5>
+                     <p>Reminds fleet managers of upcoming vehicle registration renewals, ensuring legal compliance and avoiding penalties.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-1.png" alt="">
+                      </div>
+                      <h5>Battery Replacement Alerts</h5>
+                     <p>Tracks battery life and issues alerts when replacement is necessary, avoiding breakdowns.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-2.png" alt="">
+                      </div>
+                      <h5>Vehicle Insurance Renewal Alerts:</h5>
+                     <p>Provides alerts for upcoming vehicle insurance renewals, helping avoid lapses in coverage.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-3.png" alt="">
+                      </div>
+                      <h5>Vehicle Registration Renewal Alerts</h5>
+                     <p>Reminds fleet managers of upcoming vehicle registration renewals, ensuring legal compliance and avoiding penalties.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-1.png" alt="">
+                      </div>
+                      <h5>Battery Replacement Alerts</h5>
+                     <p>Tracks battery life and issues alerts when replacement is necessary, avoiding breakdowns.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-2.png" alt="">
+                      </div>
+                      <h5>Vehicle Insurance Renewal Alerts:</h5>
+                     <p>Provides alerts for upcoming vehicle insurance renewals, helping avoid lapses in coverage.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-3.png" alt="">
+                      </div>
+                      <h5>Vehicle Registration Renewal Alerts</h5>
+                     <p>Reminds fleet managers of upcoming vehicle registration renewals, ensuring legal compliance and avoiding penalties.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-1.png" alt="">
+                      </div>
+                      <h5>Battery Replacement Alerts</h5>
+                     <p>Tracks battery life and issues alerts when replacement is necessary, avoiding breakdowns.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-2.png" alt="">
+                      </div>
+                      <h5>Vehicle Insurance Renewal Alerts:</h5>
+                     <p>Provides alerts for upcoming vehicle insurance renewals, helping avoid lapses in coverage.</p>
+                   </div>
+               </div>
+               <div class="col-lg-4 col-md-6 text-center">
+                   <div class="feature-box-wrap mb-30">
+                      <div class="feature-box-icon">
+                         <img src="assets/images/feature-box-icon-3.png" alt="">
+                      </div>
+                      <h5>Vehicle Registration Renewal Alerts</h5>
+                     <p>Reminds fleet managers of upcoming vehicle registration renewals, ensuring legal compliance and avoiding penalties.</p>
                    </div>
                </div>
            </div>
         </div>
-    </section>
-   <!-- Solution Box End-->
+     </section>
+     <!--- Features Box Section End -->
 
     <!--- Your Interest Section Start -->
     <section class="your-interest-section" style="background-image: url(assets/images/from-bg.png);">
