--- a/solution-2.html
+++ b/solution-2.html
@@ -71,10 +71,10 @@
                       <a href="solution-1.html">SOLUTION</a>
                   </li>
                   <li class="menu-item">
-                      <a href="#">FEATURES</a>
+                      <a href="feature.html">FEATURES</a>
                   </li>
                   <li class="menu-item">
-                      <a href="#">ABOUT US </a>
+                      <a href="about.html">ABOUT US </a>
                   </li>
                   <li class="menu-item">
                       <a href="#">CONTACTS</a>
